<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:cardBackgroundColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/cancelBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:cornerRadius="50dp"
                android:layout_margin="10dp"
                android:src="@drawable/ic_close"
                android:background="@drawable/round_btn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/cancel_button" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/affirmationTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintVertical_bias="0.4"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/are_you_sure"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/affirmationBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:layout_marginTop="20dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:strokeColor="@android:color/holo_orange_dark"
                app:layout_constraintTop_toBottomOf="@id/affirmationTV"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_orange_dark" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>